--- a/indexd251.html
+++ b/indexd251.html
@@ -7,7 +7,7 @@
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=UTF-8"><META HTTP-EQUIV="Refresh" CONTENT="0; URL=company-overview/index.html"><TITLE>Page has moved</TITLE>
 </HEAD>
 <BODY>
-<A HREF="company-overview/index.html"><h3>Click here...</h3></A>
+<A HREF="outsourcing/index.html"><h3>Click here...</h3></A>
 </BODY>
 <!-- Created by HTTrack Website Copier/3.48-22 [XR&CO'2014] -->
 
