--- a/services/Healthcare-Solutions/RevenueCycleManagement.html
+++ b/services/Healthcare-Solutions/RevenueCycleManagement.html
@@ -248,7 +248,7 @@
 								<div class="simple-text">
 									<p>Contact with us through our representative or submit a business inquiry online.</p>
 								</div>
-								<a href="../../about-us/index.html" class="readMore">About us </a>
+								<a href="../../about-us.html" class="readMore">About us </a>
 							</div>
 							</aside>						</aside>
 						</div>
