--- a/our-partners.html
+++ b/our-partners.html
@@ -3,11 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="profile" href="http://gmpg.org/xfn/11">
-	<link rel="pingback" href="../xmlrpc.html">
 	<title>Our partners</title>
-
-		<style type="text/css">
+	<style type="text/css">
 img.wp-smiley,
 img.emoji {
 	display: inline !important;
@@ -198,7 +195,7 @@ img.emoji {
 										<ul class="categoryList normall">
 
 											<li class=""><a href="about-us.html">About us</a></li>
-											<li class=""><a href="why-us.html">Why us</a></li>
+											<li class=""><a href="why-us.html">Why us?</a></li>
 											<li class="activeCat"><a href="our-partners.html">Partner</a></li>
 											<li class=""><a href="outsourcing.html">Outsourcing</a></li>
 											<li class=""><a href="compliance.html">Compliance</a></li>
