--- a/services/Healthcare-Solutions/FAQs.html
+++ b/services/Healthcare-Solutions/FAQs.html
@@ -365,8 +365,8 @@
 
 						<div class="col-lg-3 col-md-3  col-sm-6 col-xs-12 footer-2">
 							<div class="empty-space marg-lg-b35"></div><div id="nav_menu-2" class="widget widget_nav_menu widget-links tt-footer-list set"><h4 class="tt-foooter-title h5"><small>Quick Links</small></h4><div class="menu-footer-2-container"><ul id="menu-footer-2" class="menu">
-							<li id="menu-item-427" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-427"><a href="../../about-us.html">About US</a></li>
-							<li id="menu-item-428" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-428"><a href="../../why-us.html">Why US?</a></li>
+							<li id="menu-item-427" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-427"><a href="../../about-us.html">About us</a></li>
+							<li id="menu-item-428" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-428"><a href="../../why-us.html">Why us?</a></li>
 							<li id="menu-item-429" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-429"><a href="../../outsourcing.html">Outsourcing</a></li>
 							<li id="menu-item-430" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-430"><a href="../../compliance.html">Compliance</a></li>
 						</ul></div></div>
