--- a/services/Technology-Solutions/Multimedia.html
+++ b/services/Technology-Solutions/Multimedia.html
@@ -379,7 +379,7 @@
 						</div>
 						<div class="col-sm-6">
 							<div class="tt-copy-right">
-								Created by:  <a href="https://medinetcorpusa.com">MedinetcorpUSA</a>
+								Created by:  <a href="http://medinetcorpusa.com">MedinetcorpUSA</a>
 							</div>
 
 						</div>
