--- a/compliance.html
+++ b/compliance.html
@@ -393,7 +393,7 @@ img.emoji {
 						</div>
 						<div class="col-sm-6">
 							<div class="tt-copy-right">
-								Created by:  <a href="https://medinetcorpusa.com">MedinetcorpUSA</a>
+								Created by:  <a href="http://medinetcorpusa.com">MedinetcorpUSA</a>
 							</div>
 
 						</div>
