--- a/contact-us.html
+++ b/contact-us.html
@@ -188,14 +188,10 @@ img.emoji {
 
 <div class="vc_row wpb_row vc_inner vc_row-fluid contact-form"><div class="full-width-responsive wpb_column vc_column_container vc_col-sm-8"><div class="vc_column-inner "><div class="wpb_wrapper"><div role="form" class="wpcf7" id="wpcf7-f223-p218-o1" lang="en-US" dir="ltr">
 <div class="screen-reader-response"></div>
-<form action="contactaction.php" method="post" class="wpcf7-form" novalidate="novalidate">
-<div style="display: none;">
-<input type="hidden" name="_wpcf7" value="223" />
-<input type="hidden" name="_wpcf7_version" value="4.9" />
-<input type="hidden" name="_wpcf7_locale" value="en_US" />
-<input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f223-p218-o1" />
-<input type="hidden" name="_wpcf7_container_post" value="218" />
-</div>
+
+
+	<form action="contactaction.php" method="post" class="wpcf7-form">
+
 <div>
 <div class="form-group">
                                  <span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required form-control" aria-required="true" aria-invalid="false" placeholder="Name" /></span>
@@ -208,7 +204,13 @@ img.emoji {
                                    <span class="wpcf7-form-control-wrap your-message"><textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea form-control" aria-invalid="false" placeholder="Message"></textarea></span>
                                </div>
 <p><button type="submit" class="c-btn no-border">Contact us</button></div>
-<div class="wpcf7-response-output wpcf7-display-none"></div></form></div></div></div></div><div class="del_last_margin full-width-responsive wpb_column vc_column_container vc_col-sm-4"><div class="vc_column-inner "><div class="wpb_wrapper"><div class="address-field">
+<div class="wpcf7-response-output wpcf7-display-none"></div></form>
+
+
+
+
+
+</div></div></div></div><div class="del_last_margin full-width-responsive wpb_column vc_column_container vc_col-sm-4"><div class="vc_column-inner "><div class="wpb_wrapper"><div class="address-field">
 						     <div class="address common">
 							     <div class="icon">
 							      <ul>
